--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ APP_HOST="localhost"
 # MONGO_URI="mongodb://login:password@localhost:27017/projet?authSource=admin"
 
 ## Sinon :
-MONGO_URI="mongodb://localhost:27017/projet"
+MONGO_URI="mongodb://localhost:27017/wood-design"
