--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.2.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "react-select": "^5.7.3"
   },
   "type": "module"
 }
